[gd_scene load_steps=12 format=3 uid="uid://cv3jth7u5rno3"]

[ext_resource type="Script" path="res://demos/quadtree_terrain_demo.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://btubuuiux53j4" path="res://addons/hoimar.planetgen/scenes/gui/gui.tscn" id="2"]
[ext_resource type="Script" path="res://addons/hoimar.planetgen/scripts/celestial_bodies/solar_system.gd" id="3_hi6yo"]
[ext_resource type="PackedScene" uid="uid://dtmgyl1uf7auy" path="res://addons/hoimar.planetgen/scenes/celestial_bodies/planet.tscn" id="4"]
[ext_resource type="Resource" uid="uid://kono1hjgsisy" path="res://addons/hoimar.planetgen/planet_presets/test_planet_settings.tres" id="6"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0, 0.5, 0.533923, 0.557522, 0.864307, 1)
colors = PackedColorArray(0.05476, 0.177625, 0.311523, 1, 0.0473442, 0.462289, 0.577148, 1, 0.666992, 0.557391, 0.0364761, 1, 0.224285, 0.416992, 0.118908, 1, 0.409842, 0.366813, 0.233597, 1, 1, 0.981964, 0.953125, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[sub_resource type="StandardMaterial3D" id="3"]
albedo_texture = SubResource("2")

[sub_resource type="SphereMesh" id="4"]

[sub_resource type="Sky" id="5"]

[sub_resource type="Environment" id="6"]
background_mode = 2
sky = SubResource("5")
ambient_light_color = Color(0.992157, 0.988235, 0.988235, 1)
ambient_light_sky_contribution = 0.0
tonemap_mode = 2
glow_strength = 0.75
glow_bloom = 1.0
glow_blend_mode = 1

[node name="QuadTreeTerrainDemo" type="Node3D"]
script = ExtResource("1")
_play_in_editor = false

[node name="Gui" parent="." instance=ExtResource("2")]

[node name="SolarSystem" type="Node3D" parent="."]
script = ExtResource("3_hi6yo")

[node name="TestPlanet" parent="SolarSystem" instance=ExtResource("4")]
settings = ExtResource("6")
material = SubResource("3")
solar_system_path = NodePath("..")

[node name="ViewPositionRig" type="Node3D" parent="."]
transform = Transform3D(-0.786847, 0, -0.6176, 0, 1, 0, 0.6176, 0, -0.786847, 0, 0, 0)

[node name="ViewPosition" type="MeshInstance3D" parent="ViewPositionRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -1.42109e-14, 0, 1, -105, 0, 0)
mesh = SubResource("4")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 200)
current = true
near = 0.5
far = 1000.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("6")
